# OpenMind

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
.well-known/: agent.json
crates/openmind-actions/: Cargo.toml
crates/openmind-actions/src/: composite.rs  lib.rs  middleware.rs  protocol.rs  registry.rs
crates/openmind-api/: Cargo.toml
crates/openmind-api/src/: api_metrics.rs  lib.rs  routes.rs  state.rs  web_ui.rs
crates/openmind-cli/: Cargo.toml
crates/openmind-cli/src/: main.rs
crates/openmind-connectors/: Cargo.toml
crates/openmind-connectors/src/: blog.rs  bookmark.rs  lib.rs  note.rs  vault.rs
crates/openmind-core/: Cargo.toml
crates/openmind-core/src/: connector_registry.rs  embedding.rs  event_bus.rs  lib.rs  models.rs  registry.rs  sqlite_store.rs  traits.rs  vector_store.rs
crates/openmind-graph/: Cargo.toml
crates/openmind-graph/src/: builder.rs  entity.rs  lib.rs  traits.rs
crates/openmind-ingest/: Cargo.toml
crates/openmind-ingest/src/: chunker.rs  lib.rs  parser.rs  pipeline.rs
crates/openmind-search/: Cargo.toml
crates/openmind-search/src/: hybrid.rs  keyword.rs  lib.rs  rag.rs  semantic.rs
crates/openmind-sync/: Cargo.toml
crates/openmind-sync/src/: change_detector.rs  config.rs  conflict.rs  incremental.rs  lib.rs  monitor.rs  scheduler.rs
docs/: agent-guide.md  deployment.md  user-guide.md
