[package]
name = "openmind-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openmind-core = { path = "../openmind-core" }
openmind-search = { path = "../openmind-search" }
openmind-ingest = { path = "../openmind-ingest" }
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
