[package]
name = "openmind-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openmind"
path = "src/main.rs"

[dependencies]
openmind-core = { path = "../openmind-core" }
openmind-api = { path = "../openmind-api" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
tower-http.workspace = true
