[package]
name = "openmind-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openmind"
path = "src/main.rs"

[dependencies]
openmind-core = { path = "../openmind-core" }
openmind-api = { path = "../openmind-api" }
openmind-ingest = { path = "../openmind-ingest" }
openmind-search = { path = "../openmind-search" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
tower-http.workspace = true
serde_json.workspace = true
chrono.workspace = true
