[package]
name = "openmind-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openmind-core = { path = "../openmind-core" }
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
