[package]
name = "openmind-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openmind-core = { path = "../openmind-core" }
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
pulldown-cmark = "0.10"
scraper = "0.19"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
